--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -20,9 +20,9 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2em;
+    margin-top: 10px;
     max-width: 100%;
-    padding: 0 1em 2em;
+    padding: 0 16px 10px;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
