--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -8,7 +8,7 @@
   margin-left: 0;
   margin-right: 0;
   width: 100%;
-  margin-top: 0;
+  margin-top: 2em;
   color: $muted-text-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
@@ -20,9 +20,9 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
+    margin-top: 0;
     max-width: 100%;
-    padding: 0 16px 10px;
+    padding: 2px;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
