--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -25,6 +25,8 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     font-family: $sans-serif-narrow;
+    background-color: $primary-color;
+
 
     @include breakpoint($x-large) {
       max-width: $max-width;
@@ -35,6 +37,7 @@
     }
 
     a {
+      color: white;
       text-decoration: none;
     }
   }
