--- a/_sass/minimal-mistakes/skins/_air.scss
+++ b/_sass/minimal-mistakes/skins/_air.scss
@@ -9,8 +9,9 @@ $muted-text-color: #393e46 !default;
 $primary-color: #0092ca !default;
 $border-color: mix(#fff, #393e46, 75%) !default;
 $footer-background-color: $primary-color !default;
-$link-color: #393e46 !default;
-$link-color-hover: #3b9cba !default;
+// $link-color: #393e46 !default;
+$link-color: #3b9cba !default;
+// $link-color-hover: #3b9cba !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
 $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
