--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,3 +23,5 @@
     <script src="{{ script | relative_url }}"></script>
   {% endfor %}
 {% endif %}
+
+<link rel="shortcut icon" type="image/png" href="{{ 'favicon.jpg' | relative_url }}">
