--- a/_sass/minimal-mistakes/skins/_air.scss
+++ b/_sass/minimal-mistakes/skins/_air.scss
@@ -14,7 +14,8 @@ $link-color: $primary-color !default;
 // $link-color-hover: #3b9cba !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: $text-color !default;
-$navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
+// $navicon-link-color-hover: mix(#fff, $text-color, 80%) !default;
+$navicon-link-color-hover: $text-color !default;
 
 .page__footer {
   color: #fff !important; // override
